kubernetes/applications/manifests/guacamole/guacamole-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guacamole
  namespace: guacamole
  labels:
    app: guacamole
spec:
  serviceName: guacamole-headless
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: guacamole
          image: abesnier/guacamole:1.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: "/"
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/"
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: filetransfer
              mountPath: /tmp/filetransfer
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: longhorn
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
    - metadata:
        name: filetransfer
      spec:
        storageClassName: longhorn
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
