kubernetes/applications/manifests/guacamole/guacamole-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-headless
  namespace: guacamole
  labels:
    app: guacamole
spec:
  clusterIP: None
  selector:
    app: guacamole
  ports:
    - name: http
      port: 8080
      targetPort: 8080
