kubernetes/applications/manifests/guacamole/guacamole-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: guacamole-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - guacamole.example.com
      secretName: guacamole-tls
  rules:
    - host: guacamole.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole-app
                port:
                  number: 8080
